--- a/style.css
+++ b/style.css
@@ -1,1 +1,36 @@
-css
+
+
+
+
+*{
+    margin: 0 auto;
+    padding: 0;
+    font-family:  sans-serif;
+  }
+  .main {
+    margin-top: 20px;
+    margin-bottom: 30px;
+    padding-left: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-right: 30px;
+    border: 5px solid brown;
+    max-width: 1024px;
+  }
+  .main h1 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+
+  table,th,td{
+    border: 1px solid grey;
+    text-align:center;
+
+  }
+
+
+  body {
+
+    display: grid;
+  }
